# rusty-ci-gui

./: .gitignore  Cargo.toml  README.md  buildbot.py  main.py  primitives.py  widgets.py
src/: buildbot.rs  main.rs
